--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <h4>Why Vivasoft</h4>
                 </div>
                 <div class="row-1-body">
-                    <h2>We are more than a generic agency. Explore our Services and our Solutions for your business.</h2>    
+                    <h4>We are more than a generic agency. Explore our Services and our Solutions for your business.</h4>    
                 </div>
             </div>
             <div class="why-vivasoft-row-2">
@@ -98,9 +98,9 @@
                 <div class="work-portfolio-top">
                     <div class="porfolio-box-1">
                         <div class="portfolio-box-content">
-                            <img src="" alt="">
+                            <img src="./img/Logo-2.svg" alt="">
                             <h2>Amal Group identified opportunity</h2>
-                            <p>Telecommunications Services</p>
+                            <p class="box-content-text">Telecommunications Services</p>
                             <div class="portfolio-content-icons">
                                 <span>web</span>
                                 <span>ios</span>
