box css updated

--- a/index.html
+++ b/index.html
@@ -24,36 +24,36 @@
                 <div class="top-boxes">
                     <div class="box-1">
                         <div class="box-1-img">
-                            <img src="" alt="">
+                            <img src="./img/box-img-1.png" alt="">
                         </div>
                         <div class="box-1-content">
-                            <h2>Dedicated Dev Team</h2>
-                            <p>Our developers work with you, as part of your team.</p>
+                            <h4>Dedicated Dev Team</h4>
+                            <p class="box-texts">Our developers work with you, as part of your team.</p>
                         </div>
                     </div>
                     <div class="box-2">
                         <div class="box-2-img">
-                            <img src="" alt="">
+                            <img src="./img/box-img-2.png" alt="">
                         </div>
                         <div class="box-2-content">
-                            <h2>MVP As a Service</h2>
-                            <p>Got investors to impress? We will build that for you.</p>
+                            <h4>MVP As a Service</h4>
+                            <p class="box-texts">Got investors to impress? We will build that for you.</p>
                         </div>
                     </div>
                     <div class="box-3">
                         <div class="box-3-img">
-                            <img src="" alt="">
+                            <img src="./img/box-img-3.png" alt="">
                         </div>
                         <div class="box-3-content">
-                            <h2>Software Development</h2>
-                            <p>We solve any problem that you have and deploy them too.</p>
+                            <h4>Software Development</h4>
+                            <p class="box-texts">We solve any problem that you have and deploy them too.</p>
                         </div>
                     </div>
                 </div>
                 <div class="bottom-boxes">
                     <div class="box-4">
                         <div class="box-4-img">
-                            <img src="" alt="">
+                            <img src="./img/box-img-3.png" alt="">
                         </div>
                         <div class="box-4-content">
                             <h2>ML/AI</h2>
@@ -62,7 +62,7 @@
                     </div>
                     <div class="box-5">
                         <div class="box-5-img">
-                            <img src="" alt="">
+                            <img src="./img/box-img-5.png" alt="">
                         </div>
                         <div class="box-5-content">
                             <h2>Biz intelligence</h2>
@@ -71,7 +71,7 @@
                     </div>
                     <div class="box-6">
                         <div class="box-6-img">
-                            <img src="" alt="">
+                            <img src="./img/box-img-06.png" alt="">
                         </div>
                         <div class="box-6-content">
                             <h2>Mobile App Development</h2>
