basic front view completed

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <div class="why-vivasoft-row-1">
                 <div class="row-1-header">
                     <img src="./img/Frame-1.svg" alt="">
-                    <h4>Why Vivasoft</h4>
+                    <h4 class="content-heading">Why Vivasoft</h4>
                 </div>
                 <div class="row-1-body">
-                    <h4>We are more than a generic agency. Explore our Services and our Solutions for your business.</h4>    
+                    <h2 class="why-vivasoft-heading">We are more than a generic agency. Explore our Services and our Solutions for your business.</h2>    
                 </div>
             </div>
             <div class="why-vivasoft-row-2">
@@ -56,8 +56,8 @@
                             <img src="./img/box-img-3.png" alt="">
                         </div>
                         <div class="box-4-content">
-                            <h2>ML/AI</h2>
-                            <p>Problem solving needs, machine intelligence we have your back.</p>
+                            <h4>ML/AI</h4>
+                            <p class="box-texts">Problem solving needs, machine intelligence we have your back.</p>
                         </div>
                     </div>
                     <div class="box-5">
@@ -65,8 +65,8 @@
                             <img src="./img/box-img-5.png" alt="">
                         </div>
                         <div class="box-5-content">
-                            <h2>Biz intelligence</h2>
-                            <p>We crunch your data and give you the information that you need.</p>
+                            <h4>Biz intelligence</h4>
+                            <p class="box-texts">We crunch your data and give you the information that you need.</p>
                         </div>
                     </div>
                     <div class="box-6">
@@ -74,8 +74,8 @@
                             <img src="./img/box-img-06.png" alt="">
                         </div>
                         <div class="box-6-content">
-                            <h2>Mobile App Development</h2>
-                            <p>We build your apps for all the devices out there, native or x platform.</p>
+                            <h4>Mobile App Development</h4>
+                            <p class="box-texts">We build your apps for all the devices out there, native or x platform.</p>
                         </div>
                     </div>
                 </div>
@@ -85,14 +85,14 @@
             <div class="works-top">
                 <div class="works-top-left">
                     <img src="./img/Frame-2.svg" alt="">
-                    <h3>works</h3>
+                    <h4 class="content-heading">works</h4>
                 </div>
                 <div class="works-top-right">
                     <button>more good stuffs</button>
                 </div>
             </div>
             <div class="work-body">
-                <h2>Take a Glance to Exploration Works From Our Team</h2>
+                <h2 class="why-vivasoft-heading-2">Take a Glance to Exploration Works From Our Team</h2>
             </div>
             <div class="work-portfolio">
                 <div class="work-portfolio-top">
@@ -110,9 +110,9 @@
                     </div>
                     <div class="porfolio-box-2">
                         <div class="portfolio-box-content">
-                            <img src="" alt="">
+                            <img src="./img/amtel.png" alt="">
                             <h2>Mobile Financing System</h2>
-                            <p>Full fledged mobile web app.</p>
+                            <p class="box-content-text">Full fledged mobile web app.</p>
                             <div class="portfolio-content-icons">
                                 <span>web</span>
                                 <span>ios</span>
@@ -123,10 +123,10 @@
                 </div>
                 <div class="work-portfolio-bottom">
                     <div class="porfolio-box-3">
-                        <div class="portfolio-box-content">
-                            <img src="" alt="">
+                        <div class="portfolio-box-content-3">
+                            <h3 class="MFS">— MFS</h3>
                             <h2>Mobile Financing System</h2>
-                            <p>Financial Services</p>
+                            <p class="box-content-text">Financial Services</p>
                             <div class="portfolio-content-icons">
                                 <span>ios</span>
                                 <span>android</span>
@@ -135,9 +135,9 @@
                     </div>
                     <div class="porfolio-box-4">
                         <div class="portfolio-box-content">
-                            <img src="" alt="">
+                            <img src="./img/phr.png" alt="">
                             <h2>HR and Payroll Management Solution</h2>
-                            <p>Cloud Based HR Manegement Services</p>
+                            <p class="box-content-text">Cloud Based HR Manegement Services</p>
                             <div class="portfolio-content-icons">
                                 <span>web</span>
                                 <span>ios</span>
