made it responsive design

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container">
       <div class="why-vivasoft">
-        <div class="why-vivasoft-row-1">
+        <div class="row-1">
           <div class="row-1-header">
             <img src="./img/Frame-1.svg" alt="" />
             <h4 class="content-heading">Why Vivasoft</h4>
@@ -26,7 +26,7 @@
             </h2>
           </div>
         </div>
-        <div class="why-vivasoft-row-2">
+        <div class="row-2">
           <div class="top-boxes">
             <div class="box-1">
               <div class="box-1-img">
@@ -107,15 +107,17 @@
             <img src="./img/Frame-2.svg" alt="" />
             <h4 class="content-heading">works</h4>
           </div>
-          <div class="works-top-right">
-            <button>more good stuffs</button>
-          </div>
         </div>
         <div class="work-body">
           <h2 class="why-vivasoft-heading-2">
-            Take a Glance to Exploration Works From Our Team
+            Take a Glance to Exploration <br />
+            Works From Our Team
           </h2>
+          <div class="works-top-right">
+            <button>More good stuffs</button>
+          </div>
         </div>
+
         <div class="work-portfolio">
           <div class="work-portfolio-top">
             <div class="porfolio-box-1">
